--- a/A2COMP345/CMakeLists.txt
+++ b/A2COMP345/CMakeLists.txt
@@ -3,8 +3,10 @@ project(A2COMP345)
 
 set(CMAKE_CXX_STANDARD 14)
 
+AUX_SOURCE_DIRECTORY(Part1-2 A2)
+
 add_executable(Maps "Part1-2/Map.cpp" "Part1-2/Map.h" "Part1-2/MapDriver.cpp" "Part1-2/Army.h" "Part1-2/City.h")
 add_executable(MapLoader "Part1-2/MapLoader.cpp" "Part1-2/MapLoader.h" "Part1-2/Map.cpp" "Part1-2/Map.h")
 add_executable(Player "Part1-2/Player.cpp" "Part1-2/Player.h")
-add_executable(Cards_Deck "Part1-2/Cards.cpp" "Part1-2/Cards.h")
-add_executable(Biding_Facility "Part1-2/BidingFacility.cpp" "Part1-2/BidingFacility.h")
+add_executable(Cards_Deck "Part1-2/Cards.cpp" "Part1-2/Cards.h" Part1-2/Part5Driver.cpp "Part1-2/BidingFacility.cpp" "Part1-2/BidingFacility.h" "Part1-2/Player.cpp" "Part1-2/Player.h" "Part1-2/Army.h" "Part1-2/Army.cpp" "Part1-2/BidingFacility.cpp" "Part1-2/BidingFacility.h" "Part1-2/City.h" "Part1-2/City.cpp")
+add_executable(Part5 ${A2})
