Update files for part 5

--- a/A2COMP345/CombinedPartsWithCommentedDrivers/CMakeLists.txt
+++ b/A2COMP345/CombinedPartsWithCommentedDrivers/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
+add_executable(Part5 Part5Driver.cpp Cards.h Cards.cpp Player.h Player.cpp BidingFacility.cpp BidingFacility.h Army.h Army.cpp City.cpp City.h Map.cpp Map.h)
+add_executable(DemoConnectedGraph "Map.h" "Map.cpp" "MapDriver.cpp")
 add_executable(Part1_2
         Maps/another_working_example.map
         Maps/bad_file_extension.map.txt
