without the proper choice of map for rami ide

--- a/A3COMP345/CombinedWithMainDriver/CMakeLists.txt
+++ b/A3COMP345/CombinedWithMainDriver/CMakeLists.txt
@@ -38,4 +38,4 @@ add_executable(CombinedWithMainDriver
         Player.cpp
         Player.h
         PlayerActions.cpp
-        PlayerActions.h)
+        PlayerActions.h Strategy.cpp Strategy.h)
