--- a/.gitignore
+++ b/.gitignore
@@ -537,4 +537,4 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/c++,macos,windows,clion+all,visualstudio,visualstudiocode
-/A3COMP345/CombinedWithMainDriver/cmake-build-debug/
+/A3COMP345/CombinedWithMainDriver/cmake-build-debug/*
