Refactoring for assignment 4 part 2 and add method for printing results

--- a/A4COMP345/CombinedWithMainDriver/CMakeLists.txt
+++ b/A4COMP345/CombinedWithMainDriver/CMakeLists.txt
@@ -28,7 +28,8 @@ add_executable(CombinedWithMainDriver
         GameScore.cpp
         GameScore.h
         GameScore.hpp
-        MAINDriver.cpp
+        GameEngine.cpp
+        GameEngine.h
         MainGameLoop.cpp
         MainGameLoop.hpp
         Map.cpp
