--- a/A4COMP345/CombinedWithMainDriver/CMakeLists.txt
+++ b/A4COMP345/CombinedWithMainDriver/CMakeLists.txt
@@ -21,54 +21,21 @@ add_executable(CombinedWithMainDriver
         BidingFacility.h
         Cards.cpp
         Cards.h
+        CardsFactory.h
         City.cpp
         City.h
-        GameObservers.cpp
-        GameObservers.h
-        GameScore.cpp
-        GameScore.h
-        GameScore.hpp
+        GameCards.cpp
         GameEngine.cpp
         GameEngine.h
-        MainGameLoop.cpp
-        MainGameLoop.hpp
-        Map.cpp
-        Map.h
-        MapLoader.cpp
-        MapLoader.h
-        Player.cpp
-        Player.h
-        PlayerActions.cpp
-        PlayerActions.h
-        PlayerStrategies.h
-        PlayerStrategies.cpp CardsFactory.h GameCards.cpp)
-
-add_executable(Task_1_strategy
-        Maps/another_working_example.map
-        Maps/bad_file_extension.map.txt
-        Maps/bad_format_edges.map
-        Maps/bad_format_nodes.map
-        Maps/MAP1.map
-        Maps/Map_expected_format_invalid.map
-        Maps/Map_expected_format_valid.map
-        Maps/not_referenced_node.map
-        Maps/Untitled.txt
-        Army.cpp
-        Army.h
-        BidingFacility.cpp
-        BidingFacility.h
-        Cards.cpp
-        Cards.h
-        City.cpp
-        City.h
         GameObservers.cpp
         GameObservers.h
         GameScore.cpp
         GameScore.h
         GameScore.hpp
-        MainStrategyDriver.cpp
+        MAINDriver.cpp
         MainGameLoop.cpp
         MainGameLoop.hpp
+        MainStrategyDriver.cpp
         Map.cpp
         Map.h
         MapLoader.cpp
@@ -77,5 +44,5 @@ add_executable(Task_1_strategy
         Player.h
         PlayerActions.cpp
         PlayerActions.h
-        PlayerStrategies.h
-        PlayerStrategies.cpp)
+        PlayerStrategies.cpp
+        PlayerStrategies.h)
